fix: Typos in influxdb INIT environment variable values.

--- a/amis/stacks/influxdb-stack/docker-compose.yaml
+++ b/amis/stacks/influxdb-stack/docker-compose.yaml
@@ -17,11 +17,11 @@ services:
       - FIELDKIT_LOGGING_FULL=true
       - FIELDKIT_STATSD_ADDRESS=172.17.0.1:8125
       - DOCKER_INFLUXDB_INIT_MODE=setup
-      - DOCKER_INFLUXDB_INIT_USERNAME=${FIELDKT_INFLUX_DB_USERNAME}
-      - DOCKER_INFLUXDB_INIT_PASSWORD=${FIELDKT_INFLUX_DB_PASSWORD}
-      - DOCKER_INFLUXDB_INIT_ORG=${FIELDKT_INFLUX_DB_ORG}
-      - DOCKER_INFLUXDB_INIT_BUCKET=${FIELDKT_INFLUX_DB_BUCKET}
-      - DOCKER_INFLUXDB_INIT_ADMIN_TOKEN=${FIELDKT_INFLUX_DB_TOKEN}
+      - DOCKER_INFLUXDB_INIT_USERNAME=${FIELDKIT_INFLUX_DB_USERNAME}
+      - DOCKER_INFLUXDB_INIT_PASSWORD=${FIELDKIT_INFLUX_DB_PASSWORD}
+      - DOCKER_INFLUXDB_INIT_ORG=${FIELDKIT_INFLUX_DB_ORG}
+      - DOCKER_INFLUXDB_INIT_BUCKET=${FIELDKIT_INFLUX_DB_BUCKET}
+      - DOCKER_INFLUXDB_INIT_ADMIN_TOKEN=${FIELDKIT_INFLUX_DB_TOKEN}
     expose:
       - "8086"
     ports:
