--- a/amis/stacks/portal-stack/docker-compose.yaml
+++ b/amis/stacks/portal-stack/docker-compose.yaml
@@ -11,12 +11,12 @@ services:
       - FIELDKIT_TAG=${TAG}
       - FIELDKIT_SERVER_NAME=${HOSTNAME}
       - FIELDKIT_POSTGRES_URL=${DATABASE_URL}
-      - FIELDKIT_INFLUX_DB_URL=${FIELDKT_INFLUX_DB_URL}
-      - FIELDKIT_INFLUX_DB_USERNAME=${FIELDKT_INFLUX_DB_USERNAME}
-      - FIELDKIT_INFLUX_DB_PASSWORD=${FIELDKT_INFLUX_DB_PASSWORD}
-      - FIELDKIT_INFLUX_DB_ORG=${FIELDKT_INFLUX_DB_ORG}
-      - FIELDKIT_INFLUX_DB_BUCKET=${FIELDKT_INFLUX_DB_BUCKET}
-      - FIELDKIT_INFLUX_DB_TOKEN=${FIELDKT_INFLUX_DB_TOKEN}
+      - FIELDKIT_INFLUX_DB_URL=${FIELDKIT_INFLUX_DB_URL}
+      - FIELDKIT_INFLUX_DB_USERNAME=${FIELDKIT_INFLUX_DB_USERNAME}
+      - FIELDKIT_INFLUX_DB_PASSWORD=${FIELDKIT_INFLUX_DB_PASSWORD}
+      - FIELDKIT_INFLUX_DB_ORG=${FIELDKIT_INFLUX_DB_ORG}
+      - FIELDKIT_INFLUX_DB_BUCKET=${FIELDKIT_INFLUX_DB_BUCKET}
+      - FIELDKIT_INFLUX_DB_TOKEN=${FIELDKIT_INFLUX_DB_TOKEN}
       - FIELDKIT_DOMAIN=${ZONE_NAME}
       - FIELDKIT_EMAILER=aws
       - FIELDKIT_ARCHIVER=aws
@@ -41,12 +41,12 @@ services:
       - FIELDKIT_TAG=${TAG}
       - FIELDKIT_SERVER_NAME=${HOSTNAME}
       - FIELDKIT_POSTGRES_URL=${DATABASE_URL}
-      - FIELDKIT_INFLUX_DB_URL=${FIELDKT_INFLUX_DB_URL}
-      - FIELDKIT_INFLUX_DB_USERNAME=${FIELDKT_INFLUX_DB_USERNAME}
-      - FIELDKIT_INFLUX_DB_PASSWORD=${FIELDKT_INFLUX_DB_PASSWORD}
-      - FIELDKIT_INFLUX_DB_ORG=${FIELDKT_INFLUX_DB_ORG}
-      - FIELDKIT_INFLUX_DB_BUCKET=${FIELDKT_INFLUX_DB_BUCKET}
-      - FIELDKIT_INFLUX_DB_TOKEN=${FIELDKT_INFLUX_DB_TOKEN}
+      - FIELDKIT_INFLUX_DB_URL=${FIELDKIT_INFLUX_DB_URL}
+      - FIELDKIT_INFLUX_DB_USERNAME=${FIELDKIT_INFLUX_DB_USERNAME}
+      - FIELDKIT_INFLUX_DB_PASSWORD=${FIELDKIT_INFLUX_DB_PASSWORD}
+      - FIELDKIT_INFLUX_DB_ORG=${FIELDKIT_INFLUX_DB_ORG}
+      - FIELDKIT_INFLUX_DB_BUCKET=${FIELDKIT_INFLUX_DB_BUCKET}
+      - FIELDKIT_INFLUX_DB_TOKEN=${FIELDKIT_INFLUX_DB_TOKEN}
       - FIELDKIT_DOMAIN=${ZONE_NAME}
       - FIELDKIT_PORTAL_ROOT=/app/portal
       - FIELDKIT_WELL_KNOWN_ROOT=/app/.well-known
