feat: Wire up WORKERS and LIVE portal configuration.

--- a/amis/stacks/portal-stack/docker-compose.yaml
+++ b/amis/stacks/portal-stack/docker-compose.yaml
@@ -47,6 +47,8 @@ services:
       - FIELDKIT_INFLUX_DB_ORG=${FIELDKIT_INFLUX_DB_ORG}
       - FIELDKIT_INFLUX_DB_BUCKET=${FIELDKIT_INFLUX_DB_BUCKET}
       - FIELDKIT_INFLUX_DB_TOKEN=${FIELDKIT_INFLUX_DB_TOKEN}
+      - FIELDKIT_WORKERS=${FIELDKIT_WORKERS}
+      - FIELDKIT_LIVE=${FIELDKIT_LIVE}
       - FIELDKIT_DOMAIN=${ZONE_NAME}
       - FIELDKIT_PORTAL_ROOT=/app/portal
       - FIELDKIT_WELL_KNOWN_ROOT=/app/.well-known
