feat: Add restart policy to docker compose configs.

--- a/amis/stacks/auth-stack/docker-compose.yaml
+++ b/amis/stacks/auth-stack/docker-compose.yaml
@@ -2,6 +2,7 @@ version: "3.7"
 services:
   keycloak:
     image: "conservify/auth-keycloak:active"
+    restart: unless-stopped
     networks:
       - envoy-mesh
     environment:
