--- a/amis/stacks/proxy-stack/docker-compose.yaml
+++ b/amis/stacks/proxy-stack/docker-compose.yaml
@@ -2,6 +2,7 @@ version: "3.7"
 services:
   proxy:
     image: "conservify/proxy-service:active"
+    restart: unless-stopped
     networks:
       - envoy-mesh
     expose:
