--- a/amis/stacks/postgres-stack/docker-compose.yaml
+++ b/amis/stacks/postgres-stack/docker-compose.yaml
@@ -16,7 +16,7 @@ services:
       - FIELDKIT_PRODUCTION=${PRODUCTION}
       - FIELDKIT_LOGGING_FULL=true
       - FIELDKIT_STATSD_ADDRESS=172.17.0.1:8125
-      - DOCKER_POSTGRES_INIT_PASSWORD=${FIELDKIT_POSTGRES_DB_PASSWORD}
+      - POSTGRES_PASSWORD=${FIELDKIT_POSTGRES_DB_PASSWORD}
     expose:
       - "5432"
     ports:
