--- a/terraform/fk/user_data_app.yaml
+++ b/terraform/fk/user_data_app.yaml
@@ -15,10 +15,10 @@ write_files:
 
       APPLICATION_STACKS=${application_stacks}
 
-      METRICS_INFLUXDB_URL=${metrics_influxdb_url}
-      METRICS_INFLUXDB_DATABASE=${metrics_influxdb_database}
-      METRICS_INFLUXDB_USER=${metrics_influxdb_user}
-      METRICS_INFLUXDB_PASSWORD=${metrics_influxdb_password}
+      METRICS_INFLUX_DB_URL=${metrics_influxdb_url}
+      METRICS_INFLUX_DB_DATABASE=${metrics_influxdb_database}
+      METRICS_INFLUX_DB_USER=${metrics_influxdb_user}
+      METRICS_INFLUX_DB_PASSWORD=${metrics_influxdb_password}
 
       DATABASE_URL=${database_url}
       DATABASE_ADDRESS=${database_address}
@@ -82,10 +82,10 @@ write_files:
       SERVER_NAME=${hostname}
       ENV_TAG=${env_tag}
 
-      METRICS_INFLUXDB_URL=${metrics_influxdb_url}
-      METRICS_INFLUXDB_DATABASE=${metrics_influxdb_database}
-      METRICS_INFLUXDB_USER=${metrics_influxdb_user}
-      METRICS_INFLUXDB_PASSWORD=${metrics_influxdb_password}
+      METRICS_INFLUX_DB_URL=${metrics_influxdb_url}
+      METRICS_INFLUX_DB_DATABASE=${metrics_influxdb_database}
+      METRICS_INFLUX_DB_USER=${metrics_influxdb_user}
+      METRICS_INFLUX_DB_PASSWORD=${metrics_influxdb_password}
 
       AWS_ACCESS_KEY=${aws_access_key}
       AWS_SECRET_KEY=${aws_secret_key}
