feat: Pass TsDB url to application servers.

--- a/amis/stacks/portal-stack/docker-compose.yaml
+++ b/amis/stacks/portal-stack/docker-compose.yaml
@@ -43,6 +43,7 @@ services:
       - FIELDKIT_TAG=${TAG}
       - FIELDKIT_SERVER_NAME=${HOSTNAME}
       - FIELDKIT_POSTGRES_URL=${DATABASE_URL}
+      - FIELDKIT_TIME_SCALE_URL=${FIELDKIT_TIME_SCALE_URL}
       - FIELDKIT_INFLUX_DB_URL=${FIELDKIT_INFLUX_DB_URL}
       - FIELDKIT_INFLUX_DB_USERNAME=${FIELDKIT_INFLUX_DB_USERNAME}
       - FIELDKIT_INFLUX_DB_PASSWORD=${FIELDKIT_INFLUX_DB_PASSWORD}
