--- a/terraform/fk/user_data_app.yaml
+++ b/terraform/fk/user_data_app.yaml
@@ -25,6 +25,8 @@ write_files:
       DATABASE_USERNAME=${database_username}
       DATABASE_PASSWORD=${database_password}
 
+      FIELDKIT_TIME_SCALE_URL=${timescaledb_url}
+
       AWS_ACCESS_KEY=${aws_access_key}
       AWS_SECRET_KEY=${aws_secret_key}
       MAPBOX_TOKEN=${mapbox_token}
