--- a/amis/stacks/postgres-stack/docker-compose.yaml
+++ b/amis/stacks/postgres-stack/docker-compose.yaml
@@ -1,6 +1,6 @@
 version: "3.7"
 services:
-  proxy:
+  postgres:
     image: "conservify/postgres-service:active"
     restart: unless-stopped
     networks:
