refact: Add separate telegraf configuration for pg servers.

--- a/terraform/fk/user_data_postgres.yaml
+++ b/terraform/fk/user_data_postgres.yaml
@@ -53,4 +53,7 @@ write_files:
       }
 
 runcmd:
-  - [/var/lib/conservify/startup.sh]
+  - [ /bin/mv, /etc/telegraf/telegraf.conf, /etc/telegraf/telegraf-plain.conf ]
+  - [ /bin/mv, /etc/telegraf/telegraf-postgresql.conf, /etc/telegraf/telegraf.conf ]
+  - [ /var/lib/conservify/startup.sh ]
+
