--- a/amis/files/docker-compose@.service
+++ b/amis/files/docker-compose@.service
@@ -10,6 +10,7 @@ ExecStartPre=-/bin/bash -c "cp /etc/user_data.env 99_user_data.env"
 ExecStartPre=-/bin/bash -c "cat *_*.env > .env"
 ExecStart=/usr/bin/docker-compose --no-ansi up
 ExecStop=/usr/bin/docker-compose --no-ansi down
+StandardOutput=null
 
 [Install]
 WantedBy=multi-user.target
