--- a/amis/files/telegraf.conf
+++ b/amis/files/telegraf.conf
@@ -5841,10 +5841,10 @@
 #
 #   ## Parses tags in the datadog statsd format
 #   ## http://docs.datadoghq.com/guides/dogstatsd/
-    parse_data_dog_tags = false
+    parse_data_dog_tags = true
 #
 #   ## Parses datadog extensions to the statsd format
-    datadog_extensions = false
+    datadog_extensions = true
 #
 #   ## Statsd data translation templates, more info can be read here:
 #   ## https://github.com/influxdata/telegraf/blob/master/docs/TEMPLATE_PATTERN.md
