fix: Include *.sh in stack archives.

--- a/amis/Makefile
+++ b/amis/Makefile
@@ -87,7 +87,7 @@ $(STACK_ARCHIVES):
 	done
 	echo "TAG=$(TAG)" > $(WORK)/10_tag.env
 	cp $(SOURCES)/*.yaml $(WORK)
-	cd $(WORK) && tar chf $@ *.env *.yaml *.di
+	cd $(WORK) && tar chf $@ *.env *.yaml *.di *.sh
 	rm -rf $(WORK)
 
 tools: .bin/yq
