fix: Add FIELDKIT_QUEUES mapping to portal compose.

--- a/amis/stacks/portal-stack/docker-compose.yaml
+++ b/amis/stacks/portal-stack/docker-compose.yaml
@@ -52,6 +52,7 @@ services:
       - FIELDKIT_INFLUX_DB_ORG=${FIELDKIT_INFLUX_DB_ORG}
       - FIELDKIT_INFLUX_DB_BUCKET=${FIELDKIT_INFLUX_DB_BUCKET}
       - FIELDKIT_INFLUX_DB_TOKEN=${FIELDKIT_INFLUX_DB_TOKEN}
+      - FIELDKIT_QUEUES=${FIELDKIT_QUEUES}
       - FIELDKIT_WORKERS=${FIELDKIT_WORKERS}
       - FIELDKIT_LIVE=${FIELDKIT_LIVE}
       - FIELDKIT_DOMAIN=${ZONE_NAME}
