--- a/docker/glacier-renderer/Dockerfile
+++ b/docker/glacier-renderer/Dockerfile
@@ -1,11 +1,8 @@
-FROM golang:1.8.1
+FROM golang:1.21.5-bullseye
 RUN mkdir -p /app/work && mkdir -p /svr0/glacier/archive
 WORKDIR /app/work
 RUN apt-get update && apt-get install unzip
 RUN wget https://github.com/Conservify/glacier/archive/master.zip && unzip master.zip
-RUN go get -u github.com/lucasb-eyer/go-colorful
-RUN go get -u golang.org/x/sys/...
-RUN go get -u github.com/fsnotify/fsnotify
 RUN cd glacier-master/rendering && go build -o glacier-renderer *.go && mv glacier-renderer /app/work && mv static /app/work
 RUN rm -rf glacier-master
 EXPOSE 9090
