--- a/docker/glacier-renderer/Dockerfile
+++ b/docker/glacier-renderer/Dockerfile
@@ -6,4 +6,4 @@ RUN wget https://github.com/Conservify/glacier/archive/master.zip && unzip maste
 RUN cd glacier-master/rendering && go build -o glacier-renderer *.go && mv glacier-renderer /app/work && mv static /app/work
 RUN rm -rf glacier-master
 EXPOSE 9090
-ENTRYPOINT ["/app/work/glacier-renderer", "--web", "/app/work/static", "--watch", "--syslog", "renderer", "/svr0/glacier/archive"]
+ENTRYPOINT ["/app/work/glacier-renderer", "--web", "/app/work/static", "--recurse", "--watch", "--syslog", "renderer", "/svr1/glacier/archive"]
