--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -192,6 +192,21 @@ services:
         options:
             max-file: "5"
             max-size: "1m"
+  minio:
+    image: minio/minio
+    restart: always
+    profiles:
+      - skipped
+    ports:
+      - "9001"
+      - "9002"
+    volumes:
+      - /svr0/minio/data:/data
+    environment:
+      MINIO_ROOT_USER: admin
+      MINIO_ROOT_PASSWORD: password
+    command:
+      server /data --console-address ":9001" --address ":9002"
 
 # docker_proxy:
 #   image: rpardini/docker-registry-proxy:0.6.2
