feat(config): Native lands token.

--- a/terraform/fk/user_data_app.yaml
+++ b/terraform/fk/user_data_app.yaml
@@ -10,6 +10,7 @@ write_files:
       ZONE_NAME=${zone_name}
       ENV_TAG=${env_tag}
       STATSD_ADDRESS=${statsd_address}
+      PRODUCTION=${production}
 
       APPLICATION_STACKS=${application_stacks}
 
@@ -25,16 +26,19 @@ write_files:
 
       FIELDKIT_TIME_SCALE_URL=${timescaledb_url}
 
+      SESSION_KEY=${session_key}
+
       AWS_ACCESS_KEY=${aws_access_key}
       AWS_SECRET_KEY=${aws_secret_key}
+
       MAPBOX_TOKEN=${mapbox_token}
+      NATIVE_LANDS_TOKEN=${native_lands_token}
+
       STREAMS_BUCKET_NAME=${streams_buckets}
       MEDIA_BUCKET_NAME=${media_buckets}
       STREAMS_BUCKETS=${streams_buckets}
       MEDIA_BUCKETS=${media_buckets}
-      PRODUCTION=${production}
       EMAIL_OVERRIDE=${email_override}
-      SESSION_KEY=${session_key}
 
       FIELDKIT_WORKERS=${workers}
       FIELDKIT_QUEUES=${queues}
